syntax = "proto2";
option java_generic_services = false;
//option java_outer_classname="ProtoMATSimInterface";
option java_package = "org.matsim.hybrid";

package org.matsim.hybrid;

message MATSim2ExternPutAgent {
	message Agent {
		optional string id = 1;
		optional string enterNode = 2;
		optional string leaveNode = 3;
	}

	optional Agent agent = 1;
}

message MATSim2ExternHasSpace {
	optional string nodeId = 1;
}
message MATSim2ExternHasSpaceConfirmed {
	optional bool hasSpace = 1;
}

message MATSim2ExternPutAgentConfirmed {
}

message Extern2MATSim {
	message Agent {
		optional string id = 1;
		optional string leaveNode = 2;
	}
	optional Agent agent = 1;

}

message Extern2MATSimConfirmed {

	optional bool accepted = 1;
}

message ExternSimStepFinished {
	optional double time = 1;
}
message ExternSimStepFinishedReceived {
}

message ExternDoSimStep {
	optional double fromTime = 1;
	optional double toTime = 2;
}

message ExternDoSimStepReceived {

}

message ExternalConnect {
	optional string host = 1;
	optional int32 port = 2;
}


message ExternalConnectConfirmed {
}

message ExternOnPrepareSim {

}

message ExternOnPrepareSimConfirmed {

}
message ExternAfterSim {

}

message ExternAfterSimConfirmed {

}
message AgentsStuck {
	repeated string agentId = 1;
}

message AgentsStuckConfirmed{

}

message MaximumNumberOfAgents {

}

message MaximumNumberOfAgentsConfirmed {
	optional int32 number = 1;
}
service MATSimInterfaceService {
	rpc reqExtern2MATSim(Extern2MATSim) returns (Extern2MATSimConfirmed);
	rpc reqAgentStuck(AgentsStuck) returns (AgentsStuckConfirmed);
	rpc reqExternalConnect(ExternalConnect) returns (ExternalConnectConfirmed);
	rpc reqExternSimStepFinished(ExternSimStepFinished) returns (ExternSimStepFinishedReceived);
	rpc reqMaximumNumberOfAgents(MaximumNumberOfAgents) returns (MaximumNumberOfAgentsConfirmed);
}

service ExternInterfaceService {
	rpc reqMATSim2ExternHasSpace(MATSim2ExternHasSpace)returns (MATSim2ExternHasSpaceConfirmed);
	rpc reqMATSim2ExternPutAgent(MATSim2ExternPutAgent) returns (MATSim2ExternPutAgentConfirmed);
	rpc reqExternDoSimStep(ExternDoSimStep) returns (ExternDoSimStepReceived);
	rpc reqExternOnPrepareSim(ExternOnPrepareSim) returns (ExternOnPrepareSimConfirmed);
	rpc reqExternAfterSim(ExternAfterSim) returns (ExternAfterSimConfirmed);


}

